# nfc_copier

./: CMakeLists.txt  README.md  main.c  update.sh
lib/Config/: .DEV_Config.h.swp
lib/Fonts/: FontMilk16.c  FontMilk24.c  fonts.h
lib/GUI/: CMakeLists.txt  GUI_Paint.c
lib/LCD/: CMakeLists.txt  LCD_1in3.c  LCD_1in3.h
lib/UPS/: CMakeLists.txt  Pico_UPS.h  UPS.c
modules/: CMakeLists.txt  LCD_Module.c  LCD_Module.h  Pico_UPS.c  Pico_UPS.h
